clap_derive/tests/ui/struct_parse.stderr
error: `parse` attribute is only allowed on fields
  --> $DIR/struct_parse.rs:12:24
   |
12 | #[clap(name = "basic", parse(from_str))]
   |                        ^^^^^
